fixing height, button overflow and hover

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,6 +30,10 @@ li {
   right: 0;
 }
 
+.drawer-content {
+  min-height: 100vh;
+}
+
 .footer {
   background-color: #3f51b5;
   margin: 0;
