--- a/src/app/techniques/technique-detail/technique-detail.component.css
+++ b/src/app/techniques/technique-detail/technique-detail.component.css
@@ -1,7 +1,3 @@
 .goldheart {
   color: yellow;
 }
-
-button:hover {
-  background-color: #cfd8dc;
-}
